--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
       100% {
         transform: rotate(360deg);
       }
-    }</style><link rel="shortcut icon" href="http://10.15.115.211:3000/favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="http://10.15.115.211:3000/vendor.c9550d49886c3ded97a8.js"></script><script type="text/javascript" src="http://10.15.115.211:3000/app.c9550d49886c3ded97a8.js"></script></body></html>
+    }</style><link rel="shortcut icon" href="favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="vendor.c9550d49886c3ded97a8.js"></script><script type="text/javascript" src="app.c9550d49886c3ded97a8.js"></script></body></html>
