--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
       100% {
         transform: rotate(360deg);
       }
-    }</style><link rel="shortcut icon" href="favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="vendor.c9550d49886c3ded97a8.js"></script><script type="text/javascript" src="app.c9550d49886c3ded97a8.js"></script></body></html>
+    }</style><link rel="shortcut icon" href="https://ruanhaojian.github.io/Github-Explorer-Demo/favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/vendor.97f8e458683d63ba1436.js"></script><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/app.97f8e458683d63ba1436.js"></script></body></html>
