--- a/index.html
+++ b/index.html
@@ -16,4 +16,15 @@
       100% {
         transform: rotate(360deg);
       }
-    }</style><link rel="shortcut icon" href="https://ruanhaojian.github.io/Github-Explorer-Demo/favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/vendor.18c1a15ee27db83cb28b.js"></script><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/app.18c1a15ee27db83cb28b.js"></script></body></html>
+    }</style><link rel="shortcut icon" href="https://ruanhaojian.github.io/Github-Explorer-Demo/favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/vendor.18c1a15ee27db83cb28b.js"></script><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/app.18c1a15ee27db83cb28b.js"></script>
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?19c724f5fbdc4384a9bcc7a9c3f24eef";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+  </body></html>
