--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
       100% {
         transform: rotate(360deg);
       }
-    }</style><link rel="shortcut icon" href="https://ruanhaojian.github.io/Github-Explorer-Demo/favicon.ico"></head><body><div id="root"></div><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/vendor.18c1a15ee27db83cb28b.js"></script><script type="text/javascript" src="https://ruanhaojian.github.io/Github-Explorer-Demo/app.18c1a15ee27db83cb28b.js"></script>
-
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?19c724f5fbdc4384a9bcc7a9c3f24eef";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-  </body></html>
+    }</style><link rel="shortcut icon" href="/favicon.ico"><link href="/app.546dcb478d7c6db7e4000835d9e5d6a0.css" rel="stylesheet"></head><body><div id="root"></div><script>var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?19c724f5fbdc4384a9bcc7a9c3f24eef";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();</script><script type="text/javascript" src="/vendor.0c3af4aa4af26d448a3c.js"></script><script type="text/javascript" src="/app.45f34d896f1f295f2d05.js"></script></body></html>
