--- a/vue/index.html
+++ b/vue/index.html
@@ -1,7 +1,14 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>github-explorer-vue</title><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><link href=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/css/app.8c1f7dbd65c0bc6cfe21454599a5bcb7.css rel=stylesheet></head><body><div id=root></div><script>var _hmt = _hmt || [];
+<!DOCTYPE html><html><head><meta charset=utf-8><title>github-explorer-vue</title><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><style>@keyframes spining {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }</style><link href=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/css/app.8c1f7dbd65c0bc6cfe21454599a5bcb7.css rel=stylesheet></head><body><div id=root></div><script>var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
         hm.src = "//hm.baidu.com/hm.js?19c724f5fbdc4384a9bcc7a9c3f24eef";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
-      })();</script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/manifest.59509c27fefcc59dd94a.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/vendor.f2fe824774e054fb2990.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/app.502c739af0e20df8b1d6.js></script></body></html>
+      })();</script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/manifest.1eed99cf71cff8e182ef.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/vendor.f2fe824774e054fb2990.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/app.3dd2b22823ca38cde124.js></script></body></html>
