--- a/vue/index.html
+++ b/vue/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>github-explorer-vue</title><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><style>@keyframes spining {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }</style><link href=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/css/app.b9598784e260bc0824be7b7d2103756b.css rel=stylesheet></head><body><div id=root></div><script>var _hmt = _hmt || [];
+<!DOCTYPE html><html><head><meta charset=utf-8><title>github-explorer-vue</title><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta name=format-detection content="telephone=no, email=no"><link href=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/css/app.8f2feb02bf4079358ffee44a8d954d5c.css rel=stylesheet></head><body><div id=root></div><script>var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
         hm.src = "//hm.baidu.com/hm.js?19c724f5fbdc4384a9bcc7a9c3f24eef";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
-      })();</script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/manifest.34cc29cf57c3116c74e1.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/vendor.f2fe824774e054fb2990.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/app.d1bb3b30312b01763d06.js></script></body></html>
+      })();</script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/manifest.3c43f5e1cc74aa62226d.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/vendor.fb18762c9502daae6495.js></script><script type=text/javascript src=https://ruanhaojian.github.io/Github-Explorer-Demo/vue/static/js/app.80263fdb08efb8260bde.js></script></body></html>
